compiler/testData/diagnostics/tests/UnderscoreUsageInVariableAsFunctionCall.kt
object Host {
    val `____` = { -> }
    fun testFunTypeVal() {
        <!UNDERSCORE_USAGE_WITHOUT_BACKTICKS!>____<!>()
    }
}
